# ChatGPT-Box

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/bsp/: Kconfig.projbuild
components/espressif__cmake_utilities/: .component_hash  idf_component.yml
components/espressif__esp-box-3/: .component_hash  idf_component.yml
components/espressif__esp-box-lite/: .component_hash  (+1 more)
factory_nvs/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/app/: app_audio.c  app_sr.c  app_sr.h  app_tts_api.c  app_ui_ctrl.c  app_ui_ctrl.h  app_ui_events.c  app_wifi.c
main/services/: image_download_api.c  image_download_api.h  openai_api.c  openai_api.h  tts_api.c
main/settings/: settings.c  settings.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/images/: ui_img_body_eye_screen_png.c  ui_img_body_png.c  ui_img_body_shadow_png.c  ui_img_listen_back_glow_png.c  ui_img_listen_body_eyes_1_png.c  ui_img_listen_body_eyes_2_png.c  ui_img_reply_body_png.c  ui_img_reply_chatgpt_bg_png.c  ui_img_reply_chatgpt_logo_png.c  ui_img_reply_small_shadow_png.c  ui_img_reset_icon_png.c  ui_img_settings_back_png.c  ui_img_settings_icon_png.c  ui_img_setup_bg_png.c  ui_img_setup_text_bg_png.c  ui_img_sleep_big_z_png.c  ui_img_sleep_body_eyes_png.c  ui_img_sleep_small_z_png.c
main/ui/screens/: ui_ScreenImage.c  ui_ScreenListen.c  ui_ScreenSettings.c  ui_ScreenSetup.c  ui_ScreenWifiReset.c
squareline/: chat_gpt.sll  chat_gpt.spj  chat_gpt_events.py
(+7 files in other folders)
